# scrapify

./: .dockerignore  .env.example  .gitignore  DOCKER_COMMANDS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: targets.yaml
inputs/: facebook.json  facebook_comments.json  instagram_comments.json  instaqagram.json  linkedin.json  tiktok.json  tiktok_comments.json
src/scrapyfy/: __init__.py  apify_service.py  cli.py  config.py  constants.py  db.py  excel_service.py  logging_config.py  models.py  normalizers.py  pipeline.py  sentiment_service.py  spaces_service.py
tests/: test_cli_export_helpers.py  test_excel_export.py  test_normalizers.py  test_pipeline_company_matching.py  test_pipeline_sentiment_post_level.py  test_pipeline_tiktok_url_matching.py  test_sentiment.py
