[project]
name = "scrapyfy"
version = "0.1.0"
description = "Multi-platform social scraping pipeline with Apify and PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "apify-client>=1.8.1",
  "sqlalchemy>=2.0.38",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "typer>=0.15.1",
  "python-dateutil>=2.9.0.post0",
  "PyYAML>=6.0.2",
  "transformers>=4.36.0",
  "torch>=2.1.0",
  "sentencepiece>=0.2.0",
  "tiktoken>=0.7.0",
  "protobuf>=4.25.3",
  "openpyxl>=3.1.0",
  "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.9.6",
]

[project.scripts]
scrapyfy = "scrapyfy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapyfy"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
